cluster/apps/envrouter/envrouter/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envrouter
  namespace: envrouter
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/target: ${INGRESS_DEFAULT}
    external-dns.kubernetes.io/cloudflare-proxied: ${quote}${INGRESS_DEFAULT_CF_PROXY}${quote}
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - envrouter.${SECRET_PUBLIC_DOMAIN}
  rules:
    - backendRefs:
        - name: envrouter
          port: 80
